--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ backend/.venv/
 backend/pets.db
 backend/__pycache__/
 backend/app/__pycache__/
+backend/app/**/__pycache__/
 
 frontend/node_modules/
 frontend/.next/
