--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ backend/pets.db
 backend/__pycache__/
 backend/app/__pycache__/
 backend/app/**/__pycache__/
+backend/reports/
 
 frontend/node_modules/
 frontend/.next/
